<resources>
    <string name="app_name">SmartEyeGlasses</string>
    <!-- SIGN UP FRAGMENT -->
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="signUp">Sign Up</string>
    <string name="facebookLogin">Log in with Facebook</string>
    <string name="googleLogin">Log in with Google</string>


    <string name="loginUsername">Email</string>
    <string name="loginPassword">Password</string>
    <string name="login">Login</string>
    <string name="invalidEmailMessage">Please enter a valid email address</string>
    <string name="invalidEmailTitle">Invalid Email Address</string>
    <string name="passwordMismatch">Password Mismatch</string>
    <string name="passwordMismatchMessage">Please make sure that both the passwords are same.</string>
    <string name="enterUsernameTitle">Invalid Username</string>
    <string name="enterUsernameMessage">Please enter Username</string>
    <string name="passwordNotEnteredTitle">Enter Password</string>
    <string name="passwordNotEnteredMessage">Please enter a valid password</string>
    <string name="googleLoginFailedTitle">Error in login</string>
    <string name="googleLoginFailedMessage">Failed to login with Google Account</string>
    <string name="loginFailedMessage">Invalid email and password combination</string>
    <string name="server_client_id">405177086938-4nke4jeqenh5mv2b5kvgjsoldd1ksj48.apps.googleusercontent.com</string>

    <!-- LOGIN ACTIVITY -->
    <string name="loginTab">Login</string>
    <string name="signupTab">SignUp</string>
    <string name="USER">USER</string>
    <string name="login_error_title">There is no user record corresponding to this identifier. The user may have been deleted.</string>

    <!-- TOOLBAR -->
    <string name="signout">Sign Out</string>

    <!-- warning messages-->
    <string name="offline_toast">You are not online!!!!</string>
    <string name="offline_display_message">Please check your internet connection</string>
    <string name="offline_goto_settings">Go to wireless Settings page</string>
    <string name="offline_close_app">Close application</string>

    <!-- NOTIFICATIONS ACTIVITY -->
    <string name="notifications_header">Notifications</string>
    <string name="notifications_temp">Nothing to show.</string>

    <string name="log_onCreate" translatable="false">+ onCreate() +</string>
    <string name="log_onStart" translatable="false">++ onStart() ++</string>
    <string name="log_onResume" translatable="false">+++ onResume() +++</string>
    <string name="log_onPause" translatable="false">--- onPause() ---</string>
    <string name="log_onStop" translatable="false">-- onStop() --</string>
    <string name="log_onDestroy" translatable="false">- onDestroy() -</string>
    <string name="log_onRestart" translatable="false">* onRestart() *</string>
</resources>
